# Reddit-TikTok-Stories-Linux

./: .containerignore  .env.example  .gitignore  Containerfile  Makefile  SPEC.md  alembic.ini  config.toml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_baseline_existing_schema.py
assets/: card_style.css  card_template.html
core/: agents.py  config.py  db.py  ffmpeg.py  logging_setup.py  notify.py  render_progress.py  schedule.py  tg_flows.py  time_fmt.py  webapp_client.py
deploy/polkit/: 50-tiktok.rules
deploy/root-helper/: tiktok-slot-time-write
deploy/scripts/: tiktok-secrets-backup.sh
deploy/sudoers.d/: tiktok-slot-time-write
deploy/systemd/: tiktok-aide-check.service  tiktok-aide-check.timer  tiktok-bot.service  tiktok-confirm.service  tiktok-confirm.timer  tiktok-lynis-audit.service  tiktok-lynis-audit.timer  tiktok-notify@.service  (+22 more)
docs/: index.md  oauth-callback.html  privacy.md  terms.md  tiktokG0tMVKl8xclWW94H9TeV69c1YxqSA6sY.txt  tiktokVDs9jTvnQVL8vYIOutK2PFY3LLEyWki9.txt
launchd/: com.sebastian.tiktok-bot.plist  com.sebastian.tiktok-confirm.plist  com.sebastian.tiktok-upload.plist  com.sebastian.tiktok-webapp.plist
pipeline/: assemble.py  background.py  captions.py  clean.py  confirm_live.py  confusables.py  cover.py  filter.py  retention.py  scrape.py  tiktok_api.py  transcribe.py  tts.py  upload.py  upload_worker.py
scripts/: dom_recon.py  install_launchd.sh  install_systemd.sh  k8s-secrets-backup.sh  notify.py  run_bot.py  slot.py  tiktok_oauth.py  xvfb-exec.sh
webapp/: README.md
(+70 files in other folders)
