[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-tiktok-core"
version = "0.1.0"
description = "Shared pipeline + core libs for the Reddit → TikTok Stories pipeline (bot + slot runner)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sebastián González Crespo" }]

# Runtime deps — mirrors requirements.txt so `pip install -e .` bootstraps
# a working environment with a single command. Kept aligned with
# requirements.txt manually; the sibling
# Reddit-TikTok-Control-Plane repo declares this package as an editable
# dependency via `pip install -e /srv/tiktok/app` at deploy time.
dependencies = [
    "requests==2.32.3",
    "praw==7.8.1",
    "edge-tts==7.2.8",
    "yt-dlp==2026.6.9",
    "faster-whisper==1.1.0",
    "playwright==1.61.0",
    "spacy==3.8.13",
    "pydantic==2.13.4",
    "fastapi==0.139.0",
    "uvicorn[standard]==0.49.0",
    "python-multipart==0.0.32",
    "tomlkit==0.15.0",
    "fastapi-csrf-protect==1.0.7",
]

[tool.hatch.build.targets.wheel]
# Only the reusable Python packages are packaged. `scripts/`, `deploy/`,
# `docs/`, and (historically) `webapp/` are not importable Python
# packages — they're consumed by shell / systemd, not `import`.
packages = ["core", "pipeline"]
